first commit EchoChamber class created - static method for quickly running a simulation in a script-like manner instead OOP approach - some tests created, but more to be done VisEchoChamber class created - visualise activity distribution - visualise opinions over time opdynamics.ipynb Notebook for exploring how to use the classes and see dynamics of parameters

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# IntelliJ/Pycharm
+!/.idea/
+.idea/$CACHE_FILE$
+.idea/.gitignore
+.idea/codeStyles/
+.idea/dbnavigator.xml
+.idea/deployment.xml
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/opinion_dynamics.iml
+.idea/vcs.xml
