implemented NoisyEchoChamber refactored social interactions to rely solely on the SocialInteraction class (no need to worry about implementation when using it) fixed social interactions so individual agent-agent connections are probabilistic (previously agent-all) refactored custom integrator (Euler) to be in an `integrate` package for flexibility. Stochastic Differential Equation method and solver included. Pattern is similar to `scipy.integrate.solve_ivp`. Solving network dynamics using a custom integrator (e.g. 'Euler') includes a progressbar courtesy of tqdm. added visualisations: * `show_opinions_snapshot` - histogram of opinions with a kernel density estimate * `show_agent_opinions` - bar graph of opinions for each agent. * `show_adjacency_matrix` - matrix clustermap/heatmap/meshgrid for agent-agent interactions * `show_nearest_neighbour` - opinions of nearest neighbours. Uses `sns.JointPlot` to plot kernel density and marginal distributions of opinions and nearest opinions. * `show_summary` - plot multiple visualisation using a single command. added `colorbar_inset` utility function to prevent a colorbar from taking space from the axes. more comments and docstrings `latex_helpers.py` to make combining constants that have math symbols in them behave nicely. more test cases for echochamber, but still not enough coverage added more type hints, including custom type updated `environment.yml` to allow pandas dataframe saving to hdf and for using tqdm progrss bar. updated notebook with examples

--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,13 @@ channels:
   - defaults
 dependencies:
   - python=3.7
-  - scipy>=1.4.1
+  - scipy==1.4.1
   - numpy
   - cython
   - jupyter
   - seaborn
   - black
+  - tqdm
+  - pytables
 prefix: C:\Users\Chris\Anaconda3\envs\opinion_dynamics
 
