added docs changes to running and plotting ``run_product`` to use ``vaex`` DataFrames

--- a/environment.yml
+++ b/environment.yml
@@ -12,5 +12,7 @@ dependencies:
   - black
   - tqdm
   - pytables
+  - vaex-hdf5
+  - vaex
 prefix: C:\Users\Chris\Anaconda3\envs\opinion_dynamics
 
