feat: enable the use of a filename for caching
- remove private property `_opinions` on `SocialNetwork` as it was alwyas a partial proxy for `self.result.y[:, -1]`
- rename connection probability methods and remove depedance on `SocialNetwork` object
- add connection probability methods to `SocialInteractions` and call update during opinion dynamics
- remove chance of error for a custom solvers due to floating mantissa
- fix concatenation error on subsequent runs

--- a/environment.yml
+++ b/environment.yml
@@ -3,16 +3,16 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
-  - scipy==1.4.1
-  - numpy==1.19.2
+  - python>=3.7
+  - scipy
+  - numpy
   - cython
   - jupyter
-  - seaborn==0.11
+  - seaborn
   - black
   - flake8
   - tqdm
-  - pytables==3.6.1
-  - vaex-hdf5==0.6.0
-  - vaex==3.0.0
+  - pytables
+  - vaex-hdf5
+  - vaex
 prefix: C:\Users\Chris\Anaconda3\envs\opinion_dynamics
